[project]
name = "grandfather"
version = "0.0.0"
description = ""
authors = [
    {name = "Nick Khitrov", email = "khitrov34@gmail.com"},
]
dependencies = [

]
requires-python = ">=3.9"
license = {text = "MIT"}


[project.optional-dependencies]
sentry = ["sentry-sdk"]

[tool.pdm]
[tool.pdm.dev-dependencies]
tests = [
    "pytest>=7.2.2",
    "pytest-clarity>=1.0.1",
    "pytest-sugar>=0.9.6",
    "pytest-flake8>=1.1.1",
]
linters = [
    "black>=23.1.0",
    "flake8-class-attributes-order>=0.1.3",
    "flake8-annotations-complexity>=0.0.7",
    "flake8-useless-assert>=0.4.4",
    "flake8-newspaper-style>=0.4.3",
    "pyright>=1.1.300",

]
